discussion/kv_engine/174538/174538_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51606: Pass VB State lock to DM::notifyLocalPersistence()

In a future change we will pass the lock back when calling
PDM::sendSeqnoAck() as we rely on the lock being held in that
function.

Change-Id: I66793397c35258b75df6bfba5040dbb8f1c10215

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-05-05 19:02:12.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-05-05 19:02:32.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/297763/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-05 20:02:42.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/160/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/active_durability_monitor.h:232:58: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) override;
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: hidden overloaded virtual function "DurabilityMonitor::notifyLocalPersistence" declared here: type mismatch at 1st parameter ("int &" vs "folly::SharedMutex::ReadHolder &")
    virtual void notifyLocalPersistence(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13: error: use of undeclared identifier "folly" [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) = 0;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/passive_durability_monitor.h:178:58: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) override;
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: hidden overloaded virtual function "DurabilityMonitor::notifyLocalPersistence" declared here: type mismatch at 1st parameter ("int &" vs "folly::SharedMutex::ReadHolder &")
    virtual void notifyLocalPersistence(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/durability_monitor_test.cc:3821:30: error: variable type "PassiveDurabilityMonitor" is an abstract class [clang-diagnostic-error]
    PassiveDurabilityMonitor pdm(*engine->getVBucket(vbid));
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: unimplemented pure virtual method "notifyLocalPersistence" in "PassiveDurabilityMonitor"
    virtual void notifyLocalPersistence(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/durability_monitor_test.cc:3843:29: error: variable type "ActiveDurabilityMonitor" is an abstract class [clang-diagnostic-error]
    ActiveDurabilityMonitor adm(
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: unimplemented pure virtual method "notifyLocalPersistence" in "ActiveDurabilityMonitor"
    virtual void notifyLocalPersistence(
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/160/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/active_durability_monitor.h:232:58:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/160/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/158/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/158/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/159/ : FAILURE

Compile error at [2022-05-05T19:08:05.581Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/159/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/179/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/159]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2327 Test failed: `" (Expected `191693" to be less than or equal to `188416" - Unexpected fileSize for vbucket)
[2022-05-05T19:14:12.414Z] (256 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/179/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/203/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16303/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/153/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/163/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/162/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/166/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/162/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
